# SPDX-License-Identifier: Unlicense

get_filename_component(PERL_PATH "${PERL_EXECUTABLE}" DIRECTORY)
find_program(POD2MAN
    NAMES "pod2man" "pod2man.bat"
    HINTS "${PERL_PATH}"
    REQUIRED
)

set(OPENSSL_DOCS_LIST)
set(OPENSSL_DOCS_FULLLIST)
macro(perldoc_add_document_man PODFILE DEFAULTPAGENUMBER)
    get_filename_component(_PODFILE_ABSOLUTE ${PODFILE} ABSOLUTE)
    get_filename_component(_MAINPAGENAME ${PODFILE} NAME_WLE)
    set(_PAGENUMBER ${DEFAULTPAGENUMBER})
    execute_process(COMMAND ${PERL_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/extract-names.pl
        INPUT_FILE ${_PODFILE_ABSOLUTE}
        OUTPUT_VARIABLE _PAGENAME_OUTPUT
        COMMAND_ERROR_IS_FATAL ANY
    )
    string(STRIP ${_PAGENAME_OUTPUT} _PAGENAMES)
    string(REGEX REPLACE "[ \t\r\n]+" ";" _PAGENAMELIST ${_PAGENAMES})
    set(_PAGEOUTPUTLIST)
    foreach (_PAGENAME IN LISTS _PAGENAMELIST)
        if ( NOT "${_PAGENAME}" STREQUAL "${_MAINPAGENAME}" )
            list(FIND OPENSSL_DOCS_FULLLIST "man/man${_PAGENUMBER}/${_PAGENAME}.${_PAGENUMBER}" _FULLLISTINDEX)
            if (NOT _FULLLISTINDEX EQUAL -1)
                set(_PAGEOUTPUTLIST ${_PAGEOUTPUTLIST} "man/man${_PAGENUMBER}/${_PAGENAME}.${_PAGENUMBER}")
            endif()
            unset(_FULLLISTINDEX)
        endif()
    endforeach()
    add_custom_command(OUTPUT "man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}"
                       BYPRODUCTS ${_PAGEOUTPUTLIST}
                       COMMAND ${CMAKE_COMMAND}
                               "-DSECTION=${_PAGENUMBER}"
                               "-DPODFILEPATH=${_PODFILE_ABSOLUTE}"
                               "-DLINKS=\"${_PAGEOUTPUTLIST}\""
                               "-DOUTPUTFILEPATH=man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}"
                               "-P" generateDoc.cmake
                       MAIN_DEPENDENCY ${PODFILE}
    )
    set(OPENSSL_DOCS_LIST ${OPENSSL_DOCS_LIST} "man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}")
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}
        DESTINATION ${CMAKE_INSTALL_MANDIR}/man${_PAGENUMBER}
    )
    foreach (MANFILE IN LISTS _PAGENAMELIST)
        install(FILES ${CMAKE_CURRENT_BINARY_DIR}/man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}
            DESTINATION ${CMAKE_INSTALL_MANDIR}/man${_PAGENUMBER}
            RENAME ${MANFILE}.${_PAGENUMBER}
        )
    endforeach()
    set(OPENSSL_DOCS_FULLLIST ${OPENSSL_DOCS_FULLLIST} ${_PAGEOUTPUTLIST} "man/man${_PAGENUMBER}/${_MAINPAGENAME}.${_PAGENUMBER}")
    unset(_REPLACED_OUTPUTNAME)
    unset(_PAGEOUTPUTLIST)
    unset(_PAGENAMELIST)
    unset(_PAGENAMES)
    unset(_PAGENAME_OUTPUT)
    unset(_PAGENUMBER)
    unset(_PAGENUMBER_OUTPUT)
    unset(_MAINPAGENAME)
    unset(_PODFILE_ABSOLUTE)
endmacro()

configure_file(generateDoc.cmake.in generateDoc.cmake @ONLY)

foreach (PODFILE IN ITEMS
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/asn1parse.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/CA.pl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/ca.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/ciphers.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/cms.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/crl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/crl2pkcs7.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/dgst.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/dhparam.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/dsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/dsaparam.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/ec.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/ecparam.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/enc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/engine.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/errstr.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/gendsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/genpkey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/genrsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/list.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/nseq.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/ocsp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/openssl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/passwd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/pkcs7.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/pkcs8.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/pkcs12.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/pkey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/pkeyparam.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/pkeyutl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/prime.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/rand.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/rehash.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/req.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/rsa.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/rsautl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/s_client.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/s_server.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/s_time.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/sess_id.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/smime.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/speed.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/spkac.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/srp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/storeutl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/ts.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/tsget.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man1/x509.pod"
)
    perldoc_add_document_man(${PODFILE} 1)
endforeach()

foreach (PODFILE IN ITEMS
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_min_proto_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_mode.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_msg_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_num_tickets.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_options.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_psk_client_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_quiet_shutdown.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_read_ahead.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_record_padding_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_security_level.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_session_cache_mode.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_session_id_context.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_session_ticket_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_split_send_fragment.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_ssl_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_stateless_cookie_generate_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_timeout.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_tlsext_servername_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_tlsext_status_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_tlsext_ticket_key_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_tlsext_use_srtp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_tmp_dh_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set0_CA_list.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set1_curves.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set1_sigalgs.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set1_verify_cert_store.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_use_certificate.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_use_psk_identity_hint.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_use_serverinfo.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_do_handshake.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_export_keying_material.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_extension_supported.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_free.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_all_async_fds.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_ciphers.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_client_random.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_current_cipher.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_default_timeout.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_extms_support.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_fd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_peer_cert_chain.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_peer_certificate.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_peer_signature_nid.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_peer_tmp_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_psk_identity.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_rbio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_session.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_shared_sigalgs.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_SSL_CTX.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_verify_result.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_get0_peer_scts.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_in_init.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_key_update.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_library_init.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_load_client_CA_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_pending.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_read.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_read_early_data.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_rstate_string.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_free.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_get_compress_id.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_get_ex_data.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_get_protocol_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_get_time.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_get0_cipher.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_get0_hostname.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_get0_id_context.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_get0_peer.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_has_ticket.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_is_resumable.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_print.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_session_reused.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_SESSION_set1_id.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_set_bio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_set_connect_state.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_set_fd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_set_session.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_set_shutdown.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_set_verify_result.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_set1_host.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_shutdown.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_state_string.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_want.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_write.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/UI_create_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/UI_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/UI_STRING.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/UI_UTIL_read_pw.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_ALGOR_dup.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_check_ca.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_check_host.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_check_issued.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_check_private_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_check_purpose.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_cmp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_cmp_time.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_CRL_get0_by_serial.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_digest.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_dup.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_EXTENSION_set_object.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_get_extension_flags.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_get_pubkey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_get_serialNumber.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_get_subject_name.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_get_version.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_get0_notBefore.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_get0_signature.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_get0_uids.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_LOOKUP.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_LOOKUP_hash_dir.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_LOOKUP_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_NAME_add_entry_by_txt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_NAME_ENTRY_get_object.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_NAME_get_index_by_NID.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_NAME_get0_der.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_NAME_print_ex.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_PUBKEY_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_SIG_get0.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_STORE_add_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_STORE_CTX_get_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_STORE_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_STORE_CTX_set_verify_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_STORE_get0_param.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_STORE_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_STORE_set_verify_cb_func.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_verify_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509_VERIFY_PARAM_set_flags.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509V3_get_d2i.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/X509v3_get_ext_by_NID.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ADMISSIONS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_generate_nconf.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_INTEGER_get_int64.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_ITEM_lookup.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_OBJECT_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_STRING_length.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_STRING_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_STRING_print_ex.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_STRING_TABLE_add.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_TIME_set.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASN1_TYPE_get.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASYNC_start_job.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ASYNC_WAIT_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BF_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_ADDR.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_ADDRINFO.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_connect.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_ctrl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_f_base64.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_f_buffer.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_f_cipher.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_f_md.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_f_null.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_f_ssl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_find_type.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_get_data.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_new_CMS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_parse_hostserv.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_printf.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_push.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_read.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_s_accept.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_s_bio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_s_connect.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_s_fd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_s_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_s_mem.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_s_null.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_s_socket.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_set_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BIO_should_retry.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_add.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_add_word.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_BLINDING_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_bn2bin.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_cmp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_copy.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_CTX_start.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_generate_prime.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_mod_inverse.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_mod_mul_montgomery.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_mod_mul_reciprocal.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_num_bytes.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_rand.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_security_bits.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_set_bit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_swap.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BN_zero.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/BUF_MEM_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_add0_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_add1_recipient_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_add1_signer.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_compress.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_decrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_final.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_get0_RecipientInfos.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_get0_SignerInfos.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_get0_type.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_get1_ReceiptRequest.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_sign_receipt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_uncompress.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CMS_verify_receipt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CONF_modules_free.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CONF_modules_load_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CRYPTO_get_ex_new_index.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CRYPTO_memcmp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CRYPTO_THREAD_run_once.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CT_POLICY_EVAL_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CTLOG_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CTLOG_STORE_get0_log_by_id.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/CTLOG_STORE_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/d2i_DHparams.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/d2i_PKCS8PrivateKey_bio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/d2i_PrivateKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/d2i_SSL_SESSION.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/d2i_X509.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DEFINE_STACK_OF.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DES_random_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_generate_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_generate_parameters.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_get_1024_160.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_get0_pqg.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_new_by_nid.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_set_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DH_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_do_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_dup_DH.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_generate_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_generate_parameters.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_get0_pqg.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_set_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_SIG_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DSA_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DTLS_get_data_mtu.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DTLS_set_timer_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/DTLSv1_listen.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EC_GFp_simple_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EC_GROUP_copy.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EC_GROUP_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EC_KEY_get_enc_flags.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EC_KEY_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EC_POINT_add.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EC_POINT_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ECDSA_SIG_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ECPKParameters_print.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ENGINE_add.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_clear_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_error_string.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_get_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_GET_LIB.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_load_crypto_strings.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_load_strings.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_print_errors.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_put_error.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_remove_state.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/ERR_set_mark.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_aes.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_aria.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_bf_cbc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_blake2b512.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_BytesToKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_camellia.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_cast5_cbc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_chacha20.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_CIPHER_CTX_get_cipher_data.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_CIPHER_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_des.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_desx_cbc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_DigestInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_DigestSignInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_DigestVerifyInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_EncodeInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_EncryptInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_idea_cbc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_MD_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_md2.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_md4.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_md5.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_mdc2.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_OpenInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_asn1_get_count.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_ASN1_METHOD.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_cmp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_CTX_ctrl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_CTX_set_hkdf_md.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_CTX_set_rsa_pss_keygen_md.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_CTX_set_scrypt_N.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_CTX_set_tls1_prf_md.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_CTX_set1_pbe_pass.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_decrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_derive.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_get_default_digest_nid.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_keygen.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_meth_get_count.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_print_private.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_set1_RSA.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_PKEY_verify_recover.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_rc2_cbc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_rc4.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_rc5_32_12_16_cbc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_ripemd160.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_SealInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_seed_cbc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_sha1.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_sha3_224.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_sha224.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_SignInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_sm3.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_sm4_cbc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_VerifyInit.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/EVP_whirlpool.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/HMAC.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/i2d_CMS_bio_stream.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/i2d_PKCS7_bio_stream.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/i2d_re_X509_tbs.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/MD5.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/MDC2_Init.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/o2i_SCT_LIST.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OBJ_nid2obj.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OCSP_cert_to_id.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OCSP_request_add1_nonce.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OCSP_REQUEST_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OCSP_resp_find_status.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OCSP_response_status.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OCSP_sendreq_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OpenSSL_add_all_algorithms.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_Applink.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_config.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_fork_prepare.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_ia32cap.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_init_crypto.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_init_ssl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_instrument_bus.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_LH_COMPFUNC.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_LH_stats.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_load_builtin_modules.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_malloc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_secure_malloc.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OPENSSL_VERSION_NUMBER.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OSSL_STORE_expect.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OSSL_STORE_INFO.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OSSL_STORE_LOADER.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OSSL_STORE_open.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/OSSL_STORE_SEARCH.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PEM_bytes_read_bio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PEM_read.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PEM_read_bio_ex.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PEM_read_bio_PrivateKey.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PEM_read_CMS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PEM_write_bio_CMS_stream.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PEM_write_bio_PKCS7_stream.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS5_PBKDF2_HMAC.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS7_decrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS7_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS7_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS7_sign_add_signer.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS7_verify.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS12_create.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS12_newpass.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/PKCS12_parse.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_add.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_bytes.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_cleanup.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_DRBG_generate.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_DRBG_get0_master.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_DRBG_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_DRBG_reseed.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_DRBG_set_callbacks.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_DRBG_set_ex_data.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_egd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_load_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RAND_set_rand_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RC4_set_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RIPEMD160_Init.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_blinding_on.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_check_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_generate_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_get0_key.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_meth_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_padding_add_PKCS1_type_1.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_print.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_private_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_public_encrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_set_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_sign.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_sign_ASN1_OCTET_STRING.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/RSA_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SCT_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SCT_print.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SCT_validate.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SHA256_Init.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SMIME_read_CMS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SMIME_read_PKCS7.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SMIME_write_CMS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SMIME_write_PKCS7.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_accept.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_alert_type_string.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_alloc_buffers.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_check_chain.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CIPHER_get_name.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_clear.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_COMP_add_compression_method.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CONF_cmd.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CONF_cmd_argv.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CONF_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CONF_CTX_set_flags.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CONF_CTX_set_ssl_ctx.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CONF_CTX_set1_prefix.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_connect.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_add_extra_chain_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_add_session.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_add1_chain_cert.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_config.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_ctrl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_dane_enable.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_flush_sessions.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_free.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_get_verify_mode.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_get0_param.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_has_client_custom_ext.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_load_verify_locations.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_new.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_sess_number.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_sess_set_cache_size.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_sess_set_get_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_sessions.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_alpn_select_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_cert_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_cert_store.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_cert_verify_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_cipher_list.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_client_cert_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_client_hello_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_ct_validation_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_ctlog_list_file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_default_passwd_cb.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_ex_data.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_generate_session_id.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_info_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_keylog_callback.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man3/SSL_CTX_set_max_cert_list.pod"
)
    perldoc_add_document_man(${PODFILE} 3)
endforeach()

foreach (PODFILE IN ITEMS
    "${CMAKE_SOURCE_DIR}/openssl/doc/man5/x509v3_config.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man5/config.pod"
)
    perldoc_add_document_man(${PODFILE} 5)
endforeach()

foreach (PODFILE IN ITEMS
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/proxy-certificates.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/RAND.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/RAND_DRBG.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/RSA-PSS.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/scrypt.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/SM2.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/ssl.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/x509.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/X25519.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/bio.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/crypto.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/ct.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/des_modes.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/Ed25519.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/evp.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/ossl_store.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/ossl_store-file.pod"
    "${CMAKE_SOURCE_DIR}/openssl/doc/man7/passphrase-encoding.pod"
)
    perldoc_add_document_man(${PODFILE} 7)
endforeach()

add_custom_target(doc ALL DEPENDS ${OPENSSL_DOCS_LIST})
unset(OPENSSL_DOCS_FULLLIST)
unset(OPENSSL_DOCS_LIST)
